examples/pos/capture/ffi_blocks.effekt
interface Foo {}
extern def something {f: Foo} at io: Int = 
  js   "${box f}"
  chez "${box f}"
extern def createFoo() at io: Foo at {global} = 
  js   "42"
  chez "42"

def main() = {
  def myFoo = createFoo()
  println(something {myFoo})
}
