examples/neg/captures_sub.effekt
def fn() at {async, global} = println("hello") // ERROR Not allowed {io}